bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: identifier expected but string literal found.
if (litMessage():String=="R"){
                         ^BDR:32: error: ')' expected but '}' found.
	}
        ^